Resolve controller issue and upgrade to jdk17